Compiladores-G19/src/main/java/compi/g19/b/AnalisisSintactico/y.output
   0  $accept : programa $end

   1  programa : ID BEGIN list_sentencias END
   2           | BEGIN list_sentencias END
   3           | ID BEGIN list_sentencias
   4           | ID list_sentencias END
   5           | ID list_sentencias

   6  list_sentencias : list_sentencias sentencia
   7                  | sentencia

   8  sentencia : sentencia_declarativa ';'
   9            | sentencia_ejecutable ';'
  10            | sentencia_ejecutable
  11            | sentencia_declarativa

  12  sentencia_declarativa : tipo list_variables
  13                        | declaracion_funcion
  14                        | declaracion_tipo

  15  sentencia_ejecutable : asignacion
  16                       | invocacion_funcion
  17                       | bloque_if
  18                       | salida_mensaje
  19                       | sentencia_control

  20  sentencia_control : FOR '(' encabezado_for ')' bloque_sentencias_ejecutables
  21                    | FOR '(' encabezado_for ')' error
  22                    | FOR encabezado_for ')' bloque_sentencias_ejecutables
  23                    | FOR '(' encabezado_for bloque_sentencias_ejecutables

  24  encabezado_for : encabezado_for1
  25                 | encabezado_for2

  26  encabezado_for1 : ID ASIGNACION CONSTANTE ';' condicion ';' up_down CONSTANTE
  27                  | ID ASIGNACION CONSTANTE ';' condicion ';' CONSTANTE
  28                  | ID ASIGNACION CONSTANTE condicion ';' up_down CONSTANTE
  29                  | ID ASIGNACION CONSTANTE ';' condicion up_down CONSTANTE
  30                  | ID ASIGNACION CONSTANTE ';' condicion ';' up_down

  31  encabezado_for2 : ID ASIGNACION CONSTANTE ';' condicion ';' up_down CONSTANTE ';' '(' condicion ')'
  32                  | ID ASIGNACION CONSTANTE ';' condicion ';' CONSTANTE ';' '(' condicion ')'
  33                  | ID ASIGNACION CONSTANTE condicion ';' up_down CONSTANTE ';' '(' condicion ')'
  34                  | ID ASIGNACION CONSTANTE ';' condicion up_down CONSTANTE ';' '(' condicion ')'
  35                  | ID ASIGNACION CONSTANTE ';' condicion ';' up_down '(' condicion ')'

  36  up_down : UP
  37          | DOWN

  38  asignacion : ID ASIGNACION expresion
  39             | ID '[' CONSTANTE ']' ASIGNACION expresion
  40             | ID ASIGNACION error

  41  tipo : tipo_base
  42       | ID

  43  tipo_base : ULONGINT
  44            | SINGLE

  45  list_variables : list_variables ',' ID
  46                 | ID

  47  $$1 :

  48  $$2 :

  49  declaracion_funcion : tipo FUN ID '(' parametro ')' BEGIN $$1 cuerpo_funcion $$2 END
  50                      | tipo FUN ID '(' bloque_list_parametro ')' BEGIN cuerpo_funcion END
  51                      | tipo FUN '(' parametro ')' BEGIN cuerpo_funcion END
  52                      | tipo FUN ID '(' ')' BEGIN cuerpo_funcion END

  53  parametro : tipo ID
  54            | ID

  55  bloque_list_parametro : list_parametro ',' parametro

  56  list_parametro : parametro
  57                 | list_parametro ',' parametro

  58  cuerpo_funcion : list_sentencias_funcion sentencia_return ';'
  59                 | list_sentencias_funcion
  60                 | sentencia_return ';'

  61  list_sentencias_funcion : list_sentencias_funcion sentencia
  62                          | sentencia

  63  sentencia_return : RET '(' expresion ')'

  64  expresion : expresion '+' termino
  65            | expresion '-' termino
  66            | termino
  67            | expresion '+' error
  68            | expresion '-' error

  69  termino : termino '*' factor
  70          | termino '/' factor
  71          | factor
  72          | termino '*' error
  73          | termino '/' error

  74  factor : ID
  75         | CONSTANTE
  76         | invocacion_funcion
  77         | ID '[' CONSTANTE ']'
  78         | '-' ID
  79         | '-' CONSTANTE
  80         | '-' ID '[' CONSTANTE ']'

  81  declaracion_tipo : TYPEDEF TRIPLE '<' tipo_base '>' ID
  82                   | TYPEDEF TRIPLE '<' tipo_base '>' error
  83                   | TYPEDEF TRIPLE tipo_base '>' ID
  84                   | TYPEDEF TRIPLE '<' tipo_base ID
  85                   | TYPEDEF TRIPLE tipo_base ID
  86                   | TYPEDEF '<' tipo_base '>' ID

  87  invocacion_funcion : ID '(' expresion ')'
  88                     | ID '(' bloque_list_expresiones ')'
  89                     | ID '(' ')'
  90                     | ID '(' tipo_base '(' expresion ')' ')'

  91  fin_if : END_IF
  92         | error

  93  bloque_sentencias_ejecutables : sentencia_ejecutable ';'
  94                                | BEGIN list_sentencias_ejecutables END
  95                                | BEGIN error

  96  bloque_if : IF '(' condicion ')' THEN cuerpo_if_unico fin_if
  97            | IF '(' condicion ')' THEN cuerpo_if_bloque fin_if
  98            | IF '(' condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_unico fin_if
  99            | IF '(' condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_bloque fin_if
 100            | IF '(' condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_bloque fin_if
 101            | IF '(' condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_unico fin_if

 102  cuerpo_if_unico : sentencia_ejecutable ';'
 103                  | sentencia_return ';'

 104  cuerpo_if_bloque : BEGIN list_sentencias_ejecutables END
 105                   | BEGIN error
 106                   | list_sentencias_ejecutables END
 107                   | error

 108  list_sentencias_ejecutables : list_sentencias_ejecutables sentencia_ejecutable ';'
 109                              | sentencia_ejecutable ';'

 110  comparacion : MAYORIGUAL
 111              | MENORIGUAL
 112              | DISTINTO
 113              | '='
 114              | '>'
 115              | '<'

 116  condicion : expresion comparacion expresion
 117            | '(' bloque_list_expresiones ')' comparacion '(' bloque_list_expresiones ')'
 118            | error

 119  bloque_list_expresiones : list_expresiones ',' expresion

 120  list_expresiones : list_expresiones ',' expresion
 121                   | expresion
 122                   | error

 123  salida_mensaje : OUTF '(' CADENA ')'
 124                 | OUTF '(' expresion ')'
 125                 | OUTF '(' ')'

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	BEGIN  shift 2
	.  error

	programa  goto 3


state 1
	programa : ID . BEGIN list_sentencias END  (1)
	programa : ID . BEGIN list_sentencias  (3)
	programa : ID . list_sentencias END  (4)
	programa : ID . list_sentencias  (5)

	ID  shift 4
	IF  shift 5
	BEGIN  shift 6
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	.  error

	list_sentencias  goto 12
	sentencia  goto 13
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24


state 2
	programa : BEGIN . list_sentencias END  (2)

	ID  shift 4
	IF  shift 5
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	.  error

	list_sentencias  goto 25
	sentencia  goto 13
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	asignacion : ID . ASIGNACION expresion  (38)
	asignacion : ID . '[' CONSTANTE ']' ASIGNACION expresion  (39)
	asignacion : ID . ASIGNACION error  (40)
	tipo : ID .  (42)
	invocacion_funcion : ID . '(' expresion ')'  (87)
	invocacion_funcion : ID . '(' bloque_list_expresiones ')'  (88)
	invocacion_funcion : ID . '(' ')'  (89)
	invocacion_funcion : ID . '(' tipo_base '(' expresion ')' ')'  (90)

	ASIGNACION  shift 26
	'('  shift 27
	'['  shift 28
	ID  reduce 42
	FUN  reduce 42


state 5
	bloque_if : IF . '(' condicion ')' THEN cuerpo_if_unico fin_if  (96)
	bloque_if : IF . '(' condicion ')' THEN cuerpo_if_bloque fin_if  (97)
	bloque_if : IF . '(' condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_unico fin_if  (98)
	bloque_if : IF . '(' condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_bloque fin_if  (99)
	bloque_if : IF . '(' condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_bloque fin_if  (100)
	bloque_if : IF . '(' condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_unico fin_if  (101)

	'('  shift 29
	.  error


state 6
	programa : ID BEGIN . list_sentencias END  (1)
	programa : ID BEGIN . list_sentencias  (3)

	ID  shift 4
	IF  shift 5
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	.  error

	list_sentencias  goto 30
	sentencia  goto 13
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24


state 7
	salida_mensaje : OUTF . '(' CADENA ')'  (123)
	salida_mensaje : OUTF . '(' expresion ')'  (124)
	salida_mensaje : OUTF . '(' ')'  (125)

	'('  shift 31
	.  error


state 8
	declaracion_tipo : TYPEDEF . TRIPLE '<' tipo_base '>' ID  (81)
	declaracion_tipo : TYPEDEF . TRIPLE '<' tipo_base '>' error  (82)
	declaracion_tipo : TYPEDEF . TRIPLE tipo_base '>' ID  (83)
	declaracion_tipo : TYPEDEF . TRIPLE '<' tipo_base ID  (84)
	declaracion_tipo : TYPEDEF . TRIPLE tipo_base ID  (85)
	declaracion_tipo : TYPEDEF . '<' tipo_base '>' ID  (86)

	TRIPLE  shift 32
	'<'  shift 33
	.  error


state 9
	tipo_base : ULONGINT .  (43)

	.  reduce 43


state 10
	tipo_base : SINGLE .  (44)

	.  reduce 44


state 11
	sentencia_control : FOR . '(' encabezado_for ')' bloque_sentencias_ejecutables  (20)
	sentencia_control : FOR . '(' encabezado_for ')' error  (21)
	sentencia_control : FOR . encabezado_for ')' bloque_sentencias_ejecutables  (22)
	sentencia_control : FOR . '(' encabezado_for bloque_sentencias_ejecutables  (23)

	ID  shift 34
	'('  shift 35
	.  error

	encabezado_for  goto 36
	encabezado_for1  goto 37
	encabezado_for2  goto 38


state 12
	programa : ID list_sentencias . END  (4)
	programa : ID list_sentencias .  (5)
	list_sentencias : list_sentencias . sentencia  (6)

	ID  shift 4
	IF  shift 5
	END  shift 39
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	$end  reduce 5

	sentencia  goto 40
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24


state 13
	list_sentencias : sentencia .  (7)

	.  reduce 7


state 14
	sentencia : sentencia_declarativa . ';'  (8)
	sentencia : sentencia_declarativa .  (11)

	';'  shift 41
	$end  reduce 11
	ID  reduce 11
	IF  reduce 11
	END  reduce 11
	OUTF  reduce 11
	TYPEDEF  reduce 11
	RET  reduce 11
	ULONGINT  reduce 11
	SINGLE  reduce 11
	FOR  reduce 11


state 15
	sentencia : sentencia_ejecutable . ';'  (9)
	sentencia : sentencia_ejecutable .  (10)

	';'  shift 42
	$end  reduce 10
	ID  reduce 10
	IF  reduce 10
	END  reduce 10
	OUTF  reduce 10
	TYPEDEF  reduce 10
	RET  reduce 10
	ULONGINT  reduce 10
	SINGLE  reduce 10
	FOR  reduce 10


state 16
	sentencia_declarativa : tipo . list_variables  (12)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN $$1 cuerpo_funcion $$2 END  (49)
	declaracion_funcion : tipo . FUN ID '(' bloque_list_parametro ')' BEGIN cuerpo_funcion END  (50)
	declaracion_funcion : tipo . FUN '(' parametro ')' BEGIN cuerpo_funcion END  (51)
	declaracion_funcion : tipo . FUN ID '(' ')' BEGIN cuerpo_funcion END  (52)

	ID  shift 43
	FUN  shift 44
	.  error

	list_variables  goto 45


state 17
	sentencia_declarativa : declaracion_funcion .  (13)

	.  reduce 13


state 18
	sentencia_declarativa : declaracion_tipo .  (14)

	.  reduce 14


state 19
	sentencia_ejecutable : asignacion .  (15)

	.  reduce 15


state 20
	sentencia_ejecutable : invocacion_funcion .  (16)

	.  reduce 16


state 21
	sentencia_ejecutable : bloque_if .  (17)

	.  reduce 17


state 22
	sentencia_ejecutable : salida_mensaje .  (18)

	.  reduce 18


state 23
	sentencia_ejecutable : sentencia_control .  (19)

	.  reduce 19


state 24
	tipo : tipo_base .  (41)

	.  reduce 41


state 25
	programa : BEGIN list_sentencias . END  (2)
	list_sentencias : list_sentencias . sentencia  (6)

	ID  shift 4
	IF  shift 5
	END  shift 46
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	.  error

	sentencia  goto 40
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24


state 26
	asignacion : ID ASIGNACION . expresion  (38)
	asignacion : ID ASIGNACION . error  (40)

	error  shift 47
	ID  shift 48
	CONSTANTE  shift 49
	'-'  shift 50
	.  error

	invocacion_funcion  goto 51
	expresion  goto 52
	termino  goto 53
	factor  goto 54


state 27
	invocacion_funcion : ID '(' . expresion ')'  (87)
	invocacion_funcion : ID '(' . bloque_list_expresiones ')'  (88)
	invocacion_funcion : ID '(' . ')'  (89)
	invocacion_funcion : ID '(' . tipo_base '(' expresion ')' ')'  (90)

	error  shift 55
	ID  shift 48
	CONSTANTE  shift 49
	ULONGINT  shift 9
	SINGLE  shift 10
	')'  shift 56
	'-'  shift 50
	.  error

	invocacion_funcion  goto 51
	expresion  goto 57
	tipo_base  goto 58
	termino  goto 53
	factor  goto 54
	bloque_list_expresiones  goto 59
	list_expresiones  goto 60


state 28
	asignacion : ID '[' . CONSTANTE ']' ASIGNACION expresion  (39)

	CONSTANTE  shift 61
	.  error


state 29
	bloque_if : IF '(' . condicion ')' THEN cuerpo_if_unico fin_if  (96)
	bloque_if : IF '(' . condicion ')' THEN cuerpo_if_bloque fin_if  (97)
	bloque_if : IF '(' . condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_unico fin_if  (98)
	bloque_if : IF '(' . condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_bloque fin_if  (99)
	bloque_if : IF '(' . condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_bloque fin_if  (100)
	bloque_if : IF '(' . condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_unico fin_if  (101)

	error  shift 62
	ID  shift 48
	CONSTANTE  shift 49
	'('  shift 63
	'-'  shift 50
	.  error

	invocacion_funcion  goto 51
	condicion  goto 64
	expresion  goto 65
	termino  goto 53
	factor  goto 54


state 30
	programa : ID BEGIN list_sentencias . END  (1)
	programa : ID BEGIN list_sentencias .  (3)
	list_sentencias : list_sentencias . sentencia  (6)

	ID  shift 4
	IF  shift 5
	END  shift 66
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	$end  reduce 3

	sentencia  goto 40
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24


state 31
	salida_mensaje : OUTF '(' . CADENA ')'  (123)
	salida_mensaje : OUTF '(' . expresion ')'  (124)
	salida_mensaje : OUTF '(' . ')'  (125)

	ID  shift 48
	CONSTANTE  shift 49
	CADENA  shift 67
	')'  shift 68
	'-'  shift 50
	.  error

	invocacion_funcion  goto 51
	expresion  goto 69
	termino  goto 53
	factor  goto 54


state 32
	declaracion_tipo : TYPEDEF TRIPLE . '<' tipo_base '>' ID  (81)
	declaracion_tipo : TYPEDEF TRIPLE . '<' tipo_base '>' error  (82)
	declaracion_tipo : TYPEDEF TRIPLE . tipo_base '>' ID  (83)
	declaracion_tipo : TYPEDEF TRIPLE . '<' tipo_base ID  (84)
	declaracion_tipo : TYPEDEF TRIPLE . tipo_base ID  (85)

	ULONGINT  shift 9
	SINGLE  shift 10
	'<'  shift 70
	.  error

	tipo_base  goto 71


state 33
	declaracion_tipo : TYPEDEF '<' . tipo_base '>' ID  (86)

	ULONGINT  shift 9
	SINGLE  shift 10
	.  error

	tipo_base  goto 72


state 34
	encabezado_for1 : ID . ASIGNACION CONSTANTE ';' condicion ';' up_down CONSTANTE  (26)
	encabezado_for1 : ID . ASIGNACION CONSTANTE ';' condicion ';' CONSTANTE  (27)
	encabezado_for1 : ID . ASIGNACION CONSTANTE condicion ';' up_down CONSTANTE  (28)
	encabezado_for1 : ID . ASIGNACION CONSTANTE ';' condicion up_down CONSTANTE  (29)
	encabezado_for1 : ID . ASIGNACION CONSTANTE ';' condicion ';' up_down  (30)
	encabezado_for2 : ID . ASIGNACION CONSTANTE ';' condicion ';' up_down CONSTANTE ';' '(' condicion ')'  (31)
	encabezado_for2 : ID . ASIGNACION CONSTANTE ';' condicion ';' CONSTANTE ';' '(' condicion ')'  (32)
	encabezado_for2 : ID . ASIGNACION CONSTANTE condicion ';' up_down CONSTANTE ';' '(' condicion ')'  (33)
	encabezado_for2 : ID . ASIGNACION CONSTANTE ';' condicion up_down CONSTANTE ';' '(' condicion ')'  (34)
	encabezado_for2 : ID . ASIGNACION CONSTANTE ';' condicion ';' up_down '(' condicion ')'  (35)

	ASIGNACION  shift 73
	.  error


state 35
	sentencia_control : FOR '(' . encabezado_for ')' bloque_sentencias_ejecutables  (20)
	sentencia_control : FOR '(' . encabezado_for ')' error  (21)
	sentencia_control : FOR '(' . encabezado_for bloque_sentencias_ejecutables  (23)

	ID  shift 34
	.  error

	encabezado_for  goto 74
	encabezado_for1  goto 37
	encabezado_for2  goto 38


state 36
	sentencia_control : FOR encabezado_for . ')' bloque_sentencias_ejecutables  (22)

	')'  shift 75
	.  error


state 37
	encabezado_for : encabezado_for1 .  (24)

	.  reduce 24


state 38
	encabezado_for : encabezado_for2 .  (25)

	.  reduce 25


state 39
	programa : ID list_sentencias END .  (4)

	.  reduce 4


state 40
	list_sentencias : list_sentencias sentencia .  (6)

	.  reduce 6


state 41
	sentencia : sentencia_declarativa ';' .  (8)

	.  reduce 8


state 42
	sentencia : sentencia_ejecutable ';' .  (9)

	.  reduce 9


state 43
	list_variables : ID .  (46)

	.  reduce 46


state 44
	declaracion_funcion : tipo FUN . ID '(' parametro ')' BEGIN $$1 cuerpo_funcion $$2 END  (49)
	declaracion_funcion : tipo FUN . ID '(' bloque_list_parametro ')' BEGIN cuerpo_funcion END  (50)
	declaracion_funcion : tipo FUN . '(' parametro ')' BEGIN cuerpo_funcion END  (51)
	declaracion_funcion : tipo FUN . ID '(' ')' BEGIN cuerpo_funcion END  (52)

	ID  shift 76
	'('  shift 77
	.  error


state 45
	sentencia_declarativa : tipo list_variables .  (12)
	list_variables : list_variables . ',' ID  (45)

	','  shift 78
	$end  reduce 12
	ID  reduce 12
	IF  reduce 12
	END  reduce 12
	OUTF  reduce 12
	TYPEDEF  reduce 12
	RET  reduce 12
	ULONGINT  reduce 12
	SINGLE  reduce 12
	FOR  reduce 12
	';'  reduce 12


state 46
	programa : BEGIN list_sentencias END .  (2)

	.  reduce 2


state 47
	asignacion : ID ASIGNACION error .  (40)

	.  reduce 40


state 48
	factor : ID .  (74)
	factor : ID . '[' CONSTANTE ']'  (77)
	invocacion_funcion : ID . '(' expresion ')'  (87)
	invocacion_funcion : ID . '(' bloque_list_expresiones ')'  (88)
	invocacion_funcion : ID . '(' ')'  (89)
	invocacion_funcion : ID . '(' tipo_base '(' expresion ')' ')'  (90)

	'('  shift 27
	'['  shift 79
	$end  reduce 74
	ID  reduce 74
	MAYORIGUAL  reduce 74
	MENORIGUAL  reduce 74
	DISTINTO  reduce 74
	IF  reduce 74
	END  reduce 74
	OUTF  reduce 74
	TYPEDEF  reduce 74
	RET  reduce 74
	ULONGINT  reduce 74
	SINGLE  reduce 74
	FOR  reduce 74
	UP  reduce 74
	DOWN  reduce 74
	';'  reduce 74
	')'  reduce 74
	','  reduce 74
	'+'  reduce 74
	'-'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'<'  reduce 74
	'>'  reduce 74
	'='  reduce 74


state 49
	factor : CONSTANTE .  (75)

	.  reduce 75


state 50
	factor : '-' . ID  (78)
	factor : '-' . CONSTANTE  (79)
	factor : '-' . ID '[' CONSTANTE ']'  (80)

	ID  shift 80
	CONSTANTE  shift 81
	.  error


state 51
	factor : invocacion_funcion .  (76)

	.  reduce 76


state 52
	asignacion : ID ASIGNACION expresion .  (38)
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)
	expresion : expresion . '+' error  (67)
	expresion : expresion . '-' error  (68)

	'+'  shift 82
	'-'  shift 83
	$end  reduce 38
	ID  reduce 38
	IF  reduce 38
	END  reduce 38
	OUTF  reduce 38
	TYPEDEF  reduce 38
	RET  reduce 38
	ULONGINT  reduce 38
	SINGLE  reduce 38
	FOR  reduce 38
	';'  reduce 38


state 53
	expresion : termino .  (66)
	termino : termino . '*' factor  (69)
	termino : termino . '/' factor  (70)
	termino : termino . '*' error  (72)
	termino : termino . '/' error  (73)

	'*'  shift 84
	'/'  shift 85
	$end  reduce 66
	ID  reduce 66
	MAYORIGUAL  reduce 66
	MENORIGUAL  reduce 66
	DISTINTO  reduce 66
	IF  reduce 66
	END  reduce 66
	OUTF  reduce 66
	TYPEDEF  reduce 66
	RET  reduce 66
	ULONGINT  reduce 66
	SINGLE  reduce 66
	FOR  reduce 66
	UP  reduce 66
	DOWN  reduce 66
	';'  reduce 66
	')'  reduce 66
	','  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	'<'  reduce 66
	'>'  reduce 66
	'='  reduce 66


state 54
	termino : factor .  (71)

	.  reduce 71


state 55
	list_expresiones : error .  (122)

	.  reduce 122


state 56
	invocacion_funcion : ID '(' ')' .  (89)

	.  reduce 89


state 57
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)
	expresion : expresion . '+' error  (67)
	expresion : expresion . '-' error  (68)
	invocacion_funcion : ID '(' expresion . ')'  (87)
	list_expresiones : expresion .  (121)

	')'  shift 86
	'+'  shift 82
	'-'  shift 83
	','  reduce 121


state 58
	invocacion_funcion : ID '(' tipo_base . '(' expresion ')' ')'  (90)

	'('  shift 87
	.  error


state 59
	invocacion_funcion : ID '(' bloque_list_expresiones . ')'  (88)

	')'  shift 88
	.  error


state 60
	bloque_list_expresiones : list_expresiones . ',' expresion  (119)
	list_expresiones : list_expresiones . ',' expresion  (120)

	','  shift 89
	.  error


state 61
	asignacion : ID '[' CONSTANTE . ']' ASIGNACION expresion  (39)

	']'  shift 90
	.  error


state 62
	condicion : error .  (118)

	.  reduce 118


state 63
	condicion : '(' . bloque_list_expresiones ')' comparacion '(' bloque_list_expresiones ')'  (117)

	error  shift 55
	ID  shift 48
	CONSTANTE  shift 49
	'-'  shift 50
	.  error

	invocacion_funcion  goto 51
	expresion  goto 91
	termino  goto 53
	factor  goto 54
	bloque_list_expresiones  goto 92
	list_expresiones  goto 60


state 64
	bloque_if : IF '(' condicion . ')' THEN cuerpo_if_unico fin_if  (96)
	bloque_if : IF '(' condicion . ')' THEN cuerpo_if_bloque fin_if  (97)
	bloque_if : IF '(' condicion . ')' THEN cuerpo_if_unico ELSE cuerpo_if_unico fin_if  (98)
	bloque_if : IF '(' condicion . ')' THEN cuerpo_if_bloque ELSE cuerpo_if_bloque fin_if  (99)
	bloque_if : IF '(' condicion . ')' THEN cuerpo_if_unico ELSE cuerpo_if_bloque fin_if  (100)
	bloque_if : IF '(' condicion . ')' THEN cuerpo_if_bloque ELSE cuerpo_if_unico fin_if  (101)

	')'  shift 93
	.  error


state 65
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)
	expresion : expresion . '+' error  (67)
	expresion : expresion . '-' error  (68)
	condicion : expresion . comparacion expresion  (116)

	MAYORIGUAL  shift 94
	MENORIGUAL  shift 95
	DISTINTO  shift 96
	'+'  shift 82
	'-'  shift 83
	'<'  shift 97
	'>'  shift 98
	'='  shift 99
	.  error

	comparacion  goto 100


state 66
	programa : ID BEGIN list_sentencias END .  (1)

	.  reduce 1


state 67
	salida_mensaje : OUTF '(' CADENA . ')'  (123)

	')'  shift 101
	.  error


state 68
	salida_mensaje : OUTF '(' ')' .  (125)

	.  reduce 125


state 69
	expresion : expresion . '+' termino  (64)
	expresion : expresion . '-' termino  (65)
	expresion : expresion . '+' error  (67)
	expresion : expresion . '-' error  (68)
	salida_mensaje : OUTF '(' expresion . ')'  (124)

	')'  shift 102
	'+'  shift 82
	'-'  shift 83
	.  error


state 70
	declaracion_tipo : TYPEDEF TRIPLE '<' . tipo_base '>' ID  (81)
	declaracion_tipo : TYPEDEF TRIPLE '<' . tipo_base '>' error  (82)
	declaracion_tipo : TYPEDEF TRIPLE '<' . tipo_base ID  (84)

	ULONGINT  shift 9
	SINGLE  shift 10
	.  error

	tipo_base  goto 103


state 71
	declaracion_tipo : TYPEDEF TRIPLE tipo_base . '>' ID  (83)
	declaracion_tipo : TYPEDEF TRIPLE tipo_base . ID  (85)

	ID  shift 104
	'>'  shift 105
	.  error


state 72
	declaracion_tipo : TYPEDEF '<' tipo_base . '>' ID  (86)

	'>'  shift 106
	.  error


state 73
	encabezado_for1 : ID ASIGNACION . CONSTANTE ';' condicion ';' up_down CONSTANTE  (26)
	encabezado_for1 : ID ASIGNACION . CONSTANTE ';' condicion ';' CONSTANTE  (27)
	encabezado_for1 : ID ASIGNACION . CONSTANTE condicion ';' up_down CONSTANTE  (28)
	encabezado_for1 : ID ASIGNACION . CONSTANTE ';' condicion up_down CONSTANTE  (29)
	encabezado_for1 : ID ASIGNACION . CONSTANTE ';' condicion ';' up_down  (30)
	encabezado_for2 : ID ASIGNACION . CONSTANTE ';' condicion ';' up_down CONSTANTE ';' '(' condicion ')'  (31)
	encabezado_for2 : ID ASIGNACION . CONSTANTE ';' condicion ';' CONSTANTE ';' '(' condicion ')'  (32)
	encabezado_for2 : ID ASIGNACION . CONSTANTE condicion ';' up_down CONSTANTE ';' '(' condicion ')'  (33)
	encabezado_for2 : ID ASIGNACION . CONSTANTE ';' condicion up_down CONSTANTE ';' '(' condicion ')'  (34)
	encabezado_for2 : ID ASIGNACION . CONSTANTE ';' condicion ';' up_down '(' condicion ')'  (35)

	CONSTANTE  shift 107
	.  error


state 74
	sentencia_control : FOR '(' encabezado_for . ')' bloque_sentencias_ejecutables  (20)
	sentencia_control : FOR '(' encabezado_for . ')' error  (21)
	sentencia_control : FOR '(' encabezado_for . bloque_sentencias_ejecutables  (23)

	ID  shift 108
	IF  shift 5
	BEGIN  shift 109
	OUTF  shift 7
	FOR  shift 11
	')'  shift 110
	.  error

	sentencia_ejecutable  goto 111
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	bloque_sentencias_ejecutables  goto 112


state 75
	sentencia_control : FOR encabezado_for ')' . bloque_sentencias_ejecutables  (22)

	ID  shift 108
	IF  shift 5
	BEGIN  shift 109
	OUTF  shift 7
	FOR  shift 11
	.  error

	sentencia_ejecutable  goto 111
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	bloque_sentencias_ejecutables  goto 113


state 76
	declaracion_funcion : tipo FUN ID . '(' parametro ')' BEGIN $$1 cuerpo_funcion $$2 END  (49)
	declaracion_funcion : tipo FUN ID . '(' bloque_list_parametro ')' BEGIN cuerpo_funcion END  (50)
	declaracion_funcion : tipo FUN ID . '(' ')' BEGIN cuerpo_funcion END  (52)

	'('  shift 114
	.  error


state 77
	declaracion_funcion : tipo FUN '(' . parametro ')' BEGIN cuerpo_funcion END  (51)

	ID  shift 115
	ULONGINT  shift 9
	SINGLE  shift 10
	.  error

	tipo  goto 116
	tipo_base  goto 24
	parametro  goto 117


state 78
	list_variables : list_variables ',' . ID  (45)

	ID  shift 118
	.  error


state 79
	factor : ID '[' . CONSTANTE ']'  (77)

	CONSTANTE  shift 119
	.  error


state 80
	factor : '-' ID .  (78)
	factor : '-' ID . '[' CONSTANTE ']'  (80)
